Code review refactoring