@@ -1,5 +1,6 @@
 package by.ibondarau.tictactoe.battleservice.service.impl;
 
+import by.ibondarau.tictactoe.battleservice.checker.GameChecker;
 import by.ibondarau.tictactoe.battleservice.dao.BattleDao;
 import by.ibondarau.tictactoe.battleservice.exception.BusinessException;
 import by.ibondarau.tictactoe.battleservice.exception.NotFoundException;
@@ -18,13 +19,17 @@ import org.mockito.Mock;
 import org.mockito.Mockito;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-import java.util.Arrays;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.Optional;
+import java.util.UUID;
 
 @ExtendWith(MockitoExtension.class)
 class BattleServiceImplTest {
+
+    private final UUID firstPlayerId = UUID.randomUUID();
+    private final UUID secondPlayerId = UUID.randomUUID();
+    private final UUID battleId = UUID.randomUUID();
 
     @Mock
     private BattleDao battleDao;
@@ -35,6 +40,9 @@ class BattleServiceImplTest {
     @Mock
     private BattleUtils battleUtils;
 
+    @Mock
+    private GameChecker gameChecker;
+
     @InjectMocks
     private BattleServiceImpl battleService;
 
@@ -42,59 +50,57 @@ class BattleServiceImplTest {
     void testCreateBattle() {
         Mockito.when(battleDao.save(Mockito.any())).then((obj) -> {
                     Battle battle = obj.getArgument(0);
-                    battle.setBattleId(999);
+                    battle.setBattleId(battleId);
                     return battle;
                 }
         );
-        Battle battle = battleService.createBattle(1, 5, FirstMoveRule.SECOND_GOES_FIRST);
+        Battle battle = battleService.createBattle(firstPlayerId, 5, FirstMoveRule.SECOND_GOES_FIRST);
         Mockito.verify(battleDao).save(Mockito.any());
         Mockito.verifyNoMoreInteractions(battleDao);
-        Assertions.assertEquals(999, battle.getBattleId());
+        Assertions.assertEquals(battleId, battle.getBattleId());
         Assertions.assertEquals(BattleStatus.CREATED, battle.getStatus());
         Assertions.assertEquals(5, battle.getSize());
         Assertions.assertEquals(FirstMoveRule.SECOND_GOES_FIRST, battle.getFirstMoveRule());
-        Assertions.assertNotNull(battle.getCreated());
     }
 
     @Test
     void testGetBattle() {
-        Mockito.when(battleDao.findBattleByBattleId(Mockito.anyInt())).thenReturn(
-                Optional.of(new Battle().setBattleId(10))
+        Mockito.when(battleDao.findBattleByBattleId(Mockito.any())).thenReturn(
+                Optional.of(new Battle().setBattleId(battleId))
         );
-        Battle battle = battleService.getBattle(10);
-        Mockito.verify(battleDao).findBattleByBattleId(Mockito.anyInt());
+        Battle battle = battleService.getBattle(battleId);
+        Mockito.verify(battleDao).findBattleByBattleId(Mockito.any());
         Mockito.verifyNoMoreInteractions(battleDao);
-        Assertions.assertEquals(10, battle.getBattleId());
+        Assertions.assertEquals(battleId, battle.getBattleId());
     }
 
     @Test
     void testGetBattleEmpty() {
-        Mockito.when(battleDao.findBattleByBattleId(Mockito.anyInt())).thenReturn(
+        Mockito.when(battleDao.findBattleByBattleId(Mockito.any())).thenReturn(
                 Optional.empty()
         );
-        Assertions.assertThrows(NotFoundException.class, () -> battleService.getBattle(10));
+        Assertions.assertThrows(NotFoundException.class, () -> battleService.getBattle(battleId));
     }
 
     @Test
     void testJoinBattleFirstPlayerStarts() {
 
         Battle battle = new Battle()
-                .setBattleId(100)
                 .setStatus(BattleStatus.CREATED)
-                .setFirstPlayerId(30)
+                .setFirstPlayerId(firstPlayerId)
                 .setFirstMoveRule(FirstMoveRule.FIRST_GOES_FIRST);
-        Mockito.when(battleDao.findBattleByBattleId(Mockito.anyInt())).thenReturn(Optional.of(battle));
+        Mockito.when(battleDao.findBattleByBattleId(Mockito.any())).thenReturn(Optional.of(battle));
         Mockito.when(battleDao.save(Mockito.any())).thenReturn(battle);
 
-        Battle result = battleService.joinBattle(100, 20);
+        Battle result = battleService.joinBattle(battleId, secondPlayerId);
 
-        Mockito.verify(battleDao).findBattleByBattleId(Mockito.anyInt());
+        Mockito.verify(battleDao).findBattleByBattleId(Mockito.any());
         Mockito.verify(battleDao).save(Mockito.any());
         Mockito.verifyNoMoreInteractions(battleDao);
 
         Assertions.assertEquals(BattleStatus.STARTED, result.getStatus());
-        Assertions.assertEquals(30, result.getFirstMovingPlayerId());
-        Assertions.assertEquals(20, result.getSecondPlayerId());
+        Assertions.assertEquals(firstPlayerId, result.getFirstMovingPlayerId());
+        Assertions.assertEquals(secondPlayerId, result.getSecondPlayerId());
         Assertions.assertNotNull(result.getStarted());
 
     }
@@ -104,22 +110,21 @@ class BattleServiceImplTest {
     void testJoinBattleSecondPlayerStarts() {
 
         Battle battle = new Battle()
-                .setBattleId(100)
                 .setStatus(BattleStatus.CREATED)
-                .setFirstPlayerId(30)
+                .setFirstPlayerId(secondPlayerId)
                 .setFirstMoveRule(FirstMoveRule.SECOND_GOES_FIRST);
-        Mockito.when(battleDao.findBattleByBattleId(Mockito.anyInt())).thenReturn(Optional.of(battle));
+        Mockito.when(battleDao.findBattleByBattleId(Mockito.any())).thenReturn(Optional.of(battle));
         Mockito.when(battleDao.save(Mockito.any())).thenReturn(battle);
 
-        Battle result = battleService.joinBattle(100, 20);
+        Battle result = battleService.joinBattle(battleId, firstPlayerId);
 
-        Mockito.verify(battleDao).findBattleByBattleId(Mockito.anyInt());
+        Mockito.verify(battleDao).findBattleByBattleId(Mockito.any());
         Mockito.verify(battleDao).save(Mockito.any());
         Mockito.verifyNoMoreInteractions(battleDao);
 
         Assertions.assertEquals(BattleStatus.STARTED, result.getStatus());
-        Assertions.assertEquals(20, result.getFirstMovingPlayerId());
-        Assertions.assertEquals(20, result.getSecondPlayerId());
+        Assertions.assertEquals(firstPlayerId, result.getFirstMovingPlayerId());
+        Assertions.assertEquals(firstPlayerId, result.getSecondPlayerId());
         Assertions.assertNotNull(result.getStarted());
 
     }
@@ -128,34 +133,33 @@ class BattleServiceImplTest {
     void testJoinBattleRandom() {
 
         Battle battle = new Battle()
-                .setBattleId(100)
                 .setStatus(BattleStatus.CREATED)
-                .setFirstPlayerId(30)
+                .setFirstPlayerId(secondPlayerId)
                 .setFirstMoveRule(FirstMoveRule.RANDOM);
-        Mockito.when(battleDao.findBattleByBattleId(Mockito.anyInt())).thenReturn(Optional.of(battle));
+        Mockito.when(battleDao.findBattleByBattleId(Mockito.any())).thenReturn(Optional.of(battle));
         Mockito.when(battleDao.save(Mockito.any())).thenReturn(battle);
-        Mockito.when(randomUtils.getRandomOf(Mockito.anyInt(), Mockito.anyInt())).thenReturn(500);
+        Mockito.when(randomUtils.getRandomOf(Mockito.any(), Mockito.any())).thenReturn(firstPlayerId);
 
-        Battle result = battleService.joinBattle(100, 20);
+        Battle result = battleService.joinBattle(battleId, firstPlayerId);
 
-        Mockito.verify(battleDao).findBattleByBattleId(Mockito.anyInt());
+        Mockito.verify(battleDao).findBattleByBattleId(Mockito.any());
         Mockito.verify(battleDao).save(Mockito.any());
         Mockito.verifyNoMoreInteractions(battleDao);
 
         Assertions.assertEquals(BattleStatus.STARTED, result.getStatus());
-        Assertions.assertEquals(500, result.getFirstMovingPlayerId());
-        Assertions.assertEquals(20, result.getSecondPlayerId());
+        Assertions.assertEquals(firstPlayerId, result.getFirstMovingPlayerId());
+        Assertions.assertEquals(firstPlayerId, result.getSecondPlayerId());
         Assertions.assertNotNull(result.getStarted());
 
     }
 
     @Test
     void testJoinBattleNotFound() {
-        Mockito.when(battleDao.findBattleByBattleId(Mockito.anyInt())).thenReturn(Optional.empty());
+        Mockito.when(battleDao.findBattleByBattleId(Mockito.any())).thenReturn(Optional.empty());
 
-        Assertions.assertThrows(NotFoundException.class, () -> battleService.joinBattle(100, 20));
+        Assertions.assertThrows(NotFoundException.class, () -> battleService.joinBattle(battleId, firstPlayerId));
 
-        Mockito.verify(battleDao).findBattleByBattleId(Mockito.anyInt());
+        Mockito.verify(battleDao).findBattleByBattleId(Mockito.any());
         Mockito.verifyNoMoreInteractions(battleDao);
     }
 
@@ -163,18 +167,17 @@ class BattleServiceImplTest {
     void testJoinBattleAlreadyStarted() {
 
         Battle battle = new Battle()
-                .setBattleId(100)
                 .setStatus(BattleStatus.STARTED)
-                .setFirstPlayerId(30)
-                .setSecondPlayerId(20)
-                .setFirstMovingPlayerId(20)
+                .setFirstPlayerId(secondPlayerId)
+                .setSecondPlayerId(firstPlayerId)
+                .setFirstMovingPlayerId(firstPlayerId)
                 .setFirstMoveRule(FirstMoveRule.RANDOM);
 
-        Mockito.when(battleDao.findBattleByBattleId(Mockito.anyInt())).thenReturn(Optional.of(battle));
+        Mockito.when(battleDao.findBattleByBattleId(Mockito.any())).thenReturn(Optional.of(battle));
 
-        Assertions.assertThrows(BusinessException.class, () -> battleService.joinBattle(100, 50));
+        Assertions.assertThrows(BusinessException.class, () -> battleService.joinBattle(battleId, UUID.randomUUID()));
 
-        Mockito.verify(battleDao).findBattleByBattleId(Mockito.anyInt());
+        Mockito.verify(battleDao).findBattleByBattleId(Mockito.any());
         Mockito.verifyNoMoreInteractions(battleDao);
 
     }
@@ -182,298 +185,191 @@ class BattleServiceImplTest {
     @Test
     void testAddMove() {
         Battle battle = new Battle()
-                .setBattleId(100)
                 .setSize(3)
                 .setStatus(BattleStatus.STARTED)
-                .setFirstPlayerId(30)
-                .setSecondPlayerId(20)
-                .setFirstMovingPlayerId(20)
+                .setFirstPlayerId(firstPlayerId)
+                .setSecondPlayerId(secondPlayerId)
+                .setFirstMovingPlayerId(firstPlayerId)
                 .setFirstMoveRule(FirstMoveRule.RANDOM)
                 .setMoves(new LinkedList<>());
 
-        Mockito.when(battleDao.findBattleByBattleId(Mockito.anyInt())).thenReturn(Optional.of(battle));
+        Mockito.when(gameChecker.checkWin(Mockito.any(), Mockito.anyInt(), Mockito.any())).thenReturn(false);
+        Mockito.when(battleDao.findBattleByBattleId(Mockito.any())).thenReturn(Optional.of(battle));
         Mockito.when(battleDao.save(Mockito.any())).thenReturn(battle);
-        Mockito.when(battleUtils.getNextMovePlayerId(Mockito.any())).thenReturn(20);
+        Mockito.when(battleUtils.getNextMovePlayerId(Mockito.any())).thenReturn(firstPlayerId);
 
         Move move = new Move();
-        move.setPlayerId(20);
+        move.setPlayerId(firstPlayerId);
         move.setFirstCoordinate(1);
         move.setSecondCoordinate(1);
 
-        Battle result = battleService.makeMove(100, move);
+        Battle result = battleService.makeMove(battleId, move);
         Assertions.assertEquals(BattleStatus.STARTED, result.getStatus());
         Assertions.assertTrue(result.getMoves().contains(move));
     }
 
 
     @Test
-    void testAddMoveWinDiagonal() {
-        List<Move> moves = new LinkedList<>();
-        moves.add(new Move().setPlayerId(20).setFirstCoordinate(1).setSecondCoordinate(1));
-        moves.add(new Move().setPlayerId(30).setFirstCoordinate(0).setSecondCoordinate(1));
-        moves.add(new Move().setPlayerId(20).setFirstCoordinate(0).setSecondCoordinate(0));
-        moves.add(new Move().setPlayerId(30).setFirstCoordinate(1).setSecondCoordinate(0));
-
-        Battle battle = new Battle()
-                .setBattleId(100)
-                .setSize(3)
-                .setStatus(BattleStatus.STARTED)
-                .setFirstPlayerId(30)
-                .setSecondPlayerId(20)
-                .setFirstMovingPlayerId(20)
-                .setFirstMoveRule(FirstMoveRule.RANDOM)
-                .setMoves(moves);
-
-        Mockito.when(battleDao.findBattleByBattleId(Mockito.anyInt())).thenReturn(Optional.of(battle));
-        Mockito.when(battleDao.save(Mockito.any())).thenReturn(battle);
-        Mockito.when(battleUtils.getNextMovePlayerId(Mockito.any())).thenReturn(20);
-
-        Move move = new Move();
-        move.setPlayerId(20);
-        move.setFirstCoordinate(2);
-        move.setSecondCoordinate(2);
-
-        Battle result = battleService.makeMove(100, move);
-        Assertions.assertEquals(BattleStatus.FINISHED, result.getStatus());
-        Assertions.assertTrue(result.getMoves().contains(move));
-        Assertions.assertNotNull(result.getFinished());
-        Assertions.assertEquals(BattleResult.SECOND_WINS, result.getResult());
-    }
-
-
-    @Test
-    void testAddMoveWinRow() {
-        List<Move> moves = new LinkedList<>();
-        moves.add(new Move().setPlayerId(20).setFirstCoordinate(0).setSecondCoordinate(0));
-        moves.add(new Move().setPlayerId(30).setFirstCoordinate(1).setSecondCoordinate(1));
-        moves.add(new Move().setPlayerId(20).setFirstCoordinate(0).setSecondCoordinate(1));
-        moves.add(new Move().setPlayerId(30).setFirstCoordinate(1).setSecondCoordinate(0));
-        moves.add(new Move().setPlayerId(20).setFirstCoordinate(2).setSecondCoordinate(1));
-
-        Battle battle = new Battle()
-                .setBattleId(100)
-                .setSize(3)
-                .setStatus(BattleStatus.STARTED)
-                .setFirstPlayerId(30)
-                .setSecondPlayerId(20)
-                .setFirstMovingPlayerId(20)
-                .setFirstMoveRule(FirstMoveRule.RANDOM)
-                .setMoves(moves);
-
-        Mockito.when(battleDao.findBattleByBattleId(Mockito.anyInt())).thenReturn(Optional.of(battle));
-        Mockito.when(battleDao.save(Mockito.any())).thenReturn(battle);
-        Mockito.when(battleUtils.getNextMovePlayerId(Mockito.any())).thenReturn(30);
-
-        Move move = new Move();
-        move.setPlayerId(30);
-        move.setFirstCoordinate(1);
-        move.setSecondCoordinate(2);
-
-        Battle result = battleService.makeMove(100, move);
-        Assertions.assertEquals(BattleStatus.FINISHED, result.getStatus());
-        Assertions.assertTrue(result.getMoves().contains(move));
-        Assertions.assertNotNull(result.getFinished());
-        Assertions.assertEquals(BattleResult.FIRST_WINS, result.getResult());
-    }
-
-
-    @Test
-    void testAddMoveWinColumn() {
-        List<Move> moves = new LinkedList<>();
-        moves.add(new Move().setPlayerId(20).setFirstCoordinate(0).setSecondCoordinate(0));
-        moves.add(new Move().setPlayerId(30).setFirstCoordinate(1).setSecondCoordinate(1));
-        moves.add(new Move().setPlayerId(20).setFirstCoordinate(1).setSecondCoordinate(0));
-        moves.add(new Move().setPlayerId(30).setFirstCoordinate(0).setSecondCoordinate(1));
-
-        Battle battle = new Battle()
-                .setBattleId(100)
-                .setSize(3)
-                .setStatus(BattleStatus.STARTED)
-                .setFirstPlayerId(30)
-                .setSecondPlayerId(20)
-                .setFirstMovingPlayerId(20)
-                .setFirstMoveRule(FirstMoveRule.RANDOM)
-                .setMoves(moves);
-
-        Mockito.when(battleDao.findBattleByBattleId(Mockito.anyInt())).thenReturn(Optional.of(battle));
-        Mockito.when(battleDao.save(Mockito.any())).thenReturn(battle);
-        Mockito.when(battleUtils.getNextMovePlayerId(Mockito.any())).thenReturn(20);
-
-        Move move = new Move();
-        move.setPlayerId(20);
-        move.setFirstCoordinate(2);
-        move.setSecondCoordinate(0);
-
-        Battle result = battleService.makeMove(100, move);
-        Assertions.assertEquals(BattleStatus.FINISHED, result.getStatus());
-        Assertions.assertTrue(result.getMoves().contains(move));
-        Assertions.assertNotNull(result.getFinished());
-        Assertions.assertEquals(BattleResult.SECOND_WINS, result.getResult());
-    }
-
-    @Test
-    void testAddMoveWinAntiDiagonal() {
-        List<Move> moves = new LinkedList<>();
-        moves.add(new Move().setPlayerId(20).setFirstCoordinate(0).setSecondCoordinate(1));
-        moves.add(new Move().setPlayerId(30).setFirstCoordinate(2).setSecondCoordinate(0));
-        moves.add(new Move().setPlayerId(20).setFirstCoordinate(1).setSecondCoordinate(1));
-        moves.add(new Move().setPlayerId(30).setFirstCoordinate(1).setSecondCoordinate(1));
-        moves.add(new Move().setPlayerId(20).setFirstCoordinate(2).setSecondCoordinate(2));
-
-        Battle battle = new Battle()
-                .setBattleId(100)
-                .setSize(3)
-                .setStatus(BattleStatus.STARTED)
-                .setFirstPlayerId(30)
-                .setSecondPlayerId(20)
-                .setFirstMovingPlayerId(20)
-                .setFirstMoveRule(FirstMoveRule.RANDOM)
-                .setMoves(moves);
-
-        Mockito.when(battleDao.findBattleByBattleId(Mockito.anyInt())).thenReturn(Optional.of(battle));
-        Mockito.when(battleDao.save(Mockito.any())).thenReturn(battle);
-        Mockito.when(battleUtils.getNextMovePlayerId(Mockito.any())).thenReturn(30);
-
-        Move move = new Move();
-        move.setPlayerId(30);
-        move.setFirstCoordinate(0);
-        move.setSecondCoordinate(2);
-
-        Battle result = battleService.makeMove(100, move);
-        Assertions.assertEquals(BattleStatus.FINISHED, result.getStatus());
-        Assertions.assertTrue(result.getMoves().contains(move));
-        Assertions.assertNotNull(result.getFinished());
-        Assertions.assertEquals(BattleResult.FIRST_WINS, result.getResult());
-    }
-
-    @Test
     void testAddMoveDraw() {
         List<Move> moves = new LinkedList<>();
-        moves.add(new Move().setPlayerId(20).setFirstCoordinate(0).setSecondCoordinate(0));
-        moves.add(new Move().setPlayerId(20).setFirstCoordinate(0).setSecondCoordinate(1));
-        moves.add(new Move().setPlayerId(20).setFirstCoordinate(1).setSecondCoordinate(2));
-        moves.add(new Move().setPlayerId(20).setFirstCoordinate(2).setSecondCoordinate(0));
-        moves.add(new Move().setPlayerId(30).setFirstCoordinate(0).setSecondCoordinate(2));
-        moves.add(new Move().setPlayerId(30).setFirstCoordinate(1).setSecondCoordinate(0));
-        moves.add(new Move().setPlayerId(30).setFirstCoordinate(1).setSecondCoordinate(1));
-        moves.add(new Move().setPlayerId(30).setFirstCoordinate(2).setSecondCoordinate(1));
+        moves.add(new Move().setPlayerId(firstPlayerId).setFirstCoordinate(0).setSecondCoordinate(0));
+        moves.add(new Move().setPlayerId(firstPlayerId).setFirstCoordinate(0).setSecondCoordinate(1));
+        moves.add(new Move().setPlayerId(firstPlayerId).setFirstCoordinate(1).setSecondCoordinate(2));
+        moves.add(new Move().setPlayerId(firstPlayerId).setFirstCoordinate(2).setSecondCoordinate(0));
+        moves.add(new Move().setPlayerId(secondPlayerId).setFirstCoordinate(0).setSecondCoordinate(2));
+        moves.add(new Move().setPlayerId(secondPlayerId).setFirstCoordinate(1).setSecondCoordinate(0));
+        moves.add(new Move().setPlayerId(secondPlayerId).setFirstCoordinate(1).setSecondCoordinate(1));
+        moves.add(new Move().setPlayerId(secondPlayerId).setFirstCoordinate(2).setSecondCoordinate(1));
 
         Battle battle = new Battle()
-                .setBattleId(100)
+
                 .setSize(3)
                 .setStatus(BattleStatus.STARTED)
-                .setFirstPlayerId(30)
-                .setSecondPlayerId(20)
-                .setFirstMovingPlayerId(30)
+                .setFirstPlayerId(secondPlayerId)
+                .setSecondPlayerId(firstPlayerId)
+                .setFirstMovingPlayerId(secondPlayerId)
                 .setFirstMoveRule(FirstMoveRule.RANDOM)
                 .setMoves(moves);
 
-        Mockito.when(battleDao.findBattleByBattleId(Mockito.anyInt())).thenReturn(Optional.of(battle));
+        Mockito.when(gameChecker.checkWin(Mockito.any(), Mockito.anyInt(), Mockito.any())).thenReturn(false);
+        Mockito.when(battleDao.findBattleByBattleId(Mockito.any())).thenReturn(Optional.of(battle));
         Mockito.when(battleDao.save(Mockito.any())).thenReturn(battle);
-        Mockito.when(battleUtils.getNextMovePlayerId(Mockito.any())).thenReturn(30);
+        Mockito.when(battleUtils.getNextMovePlayerId(Mockito.any())).thenReturn(secondPlayerId);
 
         Move move = new Move();
-        move.setPlayerId(30);
+        move.setPlayerId(secondPlayerId);
         move.setFirstCoordinate(2);
         move.setSecondCoordinate(2);
 
-        Battle result = battleService.makeMove(100, move);
+        Battle result = battleService.makeMove(battleId, move);
         Assertions.assertEquals(BattleStatus.FINISHED, result.getStatus());
         Assertions.assertTrue(result.getMoves().contains(move));
         Assertions.assertNotNull(result.getFinished());
         Assertions.assertEquals(BattleResult.DRAW, result.getResult());
     }
 
-
     @Test
-    void testAddMoveWinBadTurn() {
+    void testAddMoveWin() {
         List<Move> moves = new LinkedList<>();
-        moves.add(new Move().setPlayerId(20).setFirstCoordinate(0).setSecondCoordinate(1));
-        moves.add(new Move().setPlayerId(30).setFirstCoordinate(2).setSecondCoordinate(0));
-        moves.add(new Move().setPlayerId(20).setFirstCoordinate(1).setSecondCoordinate(1));
-        moves.add(new Move().setPlayerId(30).setFirstCoordinate(1).setSecondCoordinate(1));
-        moves.add(new Move().setPlayerId(20).setFirstCoordinate(2).setSecondCoordinate(2));
+        moves.add(new Move().setPlayerId(firstPlayerId).setFirstCoordinate(1).setSecondCoordinate(1));
+        moves.add(new Move().setPlayerId(secondPlayerId).setFirstCoordinate(0).setSecondCoordinate(1));
+        moves.add(new Move().setPlayerId(firstPlayerId).setFirstCoordinate(0).setSecondCoordinate(0));
+        moves.add(new Move().setPlayerId(secondPlayerId).setFirstCoordinate(1).setSecondCoordinate(0));
 
         Battle battle = new Battle()
-                .setBattleId(100)
+
                 .setSize(3)
                 .setStatus(BattleStatus.STARTED)
-                .setFirstPlayerId(30)
-                .setSecondPlayerId(20)
-                .setFirstMovingPlayerId(20)
+                .setFirstPlayerId(secondPlayerId)
+                .setSecondPlayerId(firstPlayerId)
+                .setFirstMovingPlayerId(firstPlayerId)
                 .setFirstMoveRule(FirstMoveRule.RANDOM)
                 .setMoves(moves);
 
-        Mockito.when(battleDao.findBattleByBattleId(Mockito.anyInt())).thenReturn(Optional.of(battle));
-        Mockito.when(battleUtils.getNextMovePlayerId(Mockito.any())).thenReturn(30);
+        Mockito.when(gameChecker.checkWin(Mockito.any(), Mockito.anyInt(), Mockito.any())).thenReturn(true);
+        Mockito.when(battleDao.findBattleByBattleId(Mockito.any())).thenReturn(Optional.of(battle));
+        Mockito.when(battleDao.save(Mockito.any())).thenReturn(battle);
+        Mockito.when(battleUtils.getNextMovePlayerId(Mockito.any())).thenReturn(firstPlayerId);
 
         Move move = new Move();
-        move.setPlayerId(20);
+        move.setPlayerId(firstPlayerId);
+        move.setFirstCoordinate(2);
+        move.setSecondCoordinate(2);
+
+        Battle result = battleService.makeMove(battleId, move);
+        Assertions.assertEquals(BattleStatus.FINISHED, result.getStatus());
+        Assertions.assertTrue(result.getMoves().contains(move));
+        Assertions.assertNotNull(result.getFinished());
+        Assertions.assertEquals(BattleResult.SECOND_WINS, result.getResult());
+    }
+
+
+    @Test
+    void testAddMoveBadTurn() {
+        List<Move> moves = new LinkedList<>();
+        moves.add(new Move().setPlayerId(firstPlayerId).setFirstCoordinate(0).setSecondCoordinate(1));
+        moves.add(new Move().setPlayerId(secondPlayerId).setFirstCoordinate(2).setSecondCoordinate(0));
+        moves.add(new Move().setPlayerId(firstPlayerId).setFirstCoordinate(1).setSecondCoordinate(1));
+        moves.add(new Move().setPlayerId(secondPlayerId).setFirstCoordinate(1).setSecondCoordinate(1));
+        moves.add(new Move().setPlayerId(firstPlayerId).setFirstCoordinate(2).setSecondCoordinate(2));
+
+        Battle battle = new Battle()
+
+                .setSize(3)
+                .setStatus(BattleStatus.STARTED)
+                .setFirstPlayerId(secondPlayerId)
+                .setSecondPlayerId(firstPlayerId)
+                .setFirstMovingPlayerId(firstPlayerId)
+                .setFirstMoveRule(FirstMoveRule.RANDOM)
+                .setMoves(moves);
+
+        Mockito.when(battleDao.findBattleByBattleId(Mockito.any())).thenReturn(Optional.of(battle));
+        Mockito.when(battleUtils.getNextMovePlayerId(Mockito.any())).thenReturn(secondPlayerId);
+
+        Move move = new Move();
+        move.setPlayerId(firstPlayerId);
         move.setFirstCoordinate(0);
         move.setSecondCoordinate(2);
 
-        Assertions.assertThrows(BusinessException.class, () -> battleService.makeMove(100, move));
+        Assertions.assertThrows(BusinessException.class, () -> battleService.makeMove(battleId, move));
     }
 
     @Test
-    void testAddMoveWinDuplicateMoe() {
+    void testAddMoveDuplicatedMove() {
         List<Move> moves = new LinkedList<>();
-        moves.add(new Move().setPlayerId(20).setFirstCoordinate(0).setSecondCoordinate(1));
-        moves.add(new Move().setPlayerId(30).setFirstCoordinate(2).setSecondCoordinate(0));
-        moves.add(new Move().setPlayerId(20).setFirstCoordinate(1).setSecondCoordinate(1));
-        moves.add(new Move().setPlayerId(30).setFirstCoordinate(1).setSecondCoordinate(1));
-        moves.add(new Move().setPlayerId(20).setFirstCoordinate(2).setSecondCoordinate(2));
+        moves.add(new Move().setPlayerId(firstPlayerId).setFirstCoordinate(1).setSecondCoordinate(1));
+        moves.add(new Move().setPlayerId(secondPlayerId).setFirstCoordinate(2).setSecondCoordinate(1));
 
         Battle battle = new Battle()
-                .setBattleId(100)
+
                 .setSize(3)
                 .setStatus(BattleStatus.STARTED)
-                .setFirstPlayerId(30)
-                .setSecondPlayerId(20)
-                .setFirstMovingPlayerId(20)
+                .setFirstPlayerId(secondPlayerId)
+                .setSecondPlayerId(firstPlayerId)
+                .setFirstMovingPlayerId(firstPlayerId)
                 .setFirstMoveRule(FirstMoveRule.RANDOM)
                 .setMoves(moves);
 
-        Mockito.when(battleDao.findBattleByBattleId(Mockito.anyInt())).thenReturn(Optional.of(battle));
-        Mockito.when(battleUtils.getNextMovePlayerId(Mockito.any())).thenReturn(20);
+        Mockito.when(battleDao.findBattleByBattleId(Mockito.any())).thenReturn(Optional.of(battle));
+        Mockito.when(battleUtils.getNextMovePlayerId(Mockito.any())).thenReturn(firstPlayerId);
 
         Move move = new Move();
-        move.setPlayerId(20);
-        move.setFirstCoordinate(0);
+        move.setPlayerId(firstPlayerId);
+        move.setFirstCoordinate(2);
         move.setSecondCoordinate(1);
 
-        Assertions.assertThrows(BusinessException.class, () -> battleService.makeMove(100, move));
+        Assertions.assertThrows(BusinessException.class, () -> battleService.makeMove(battleId, move));
     }
 
     @Test
-    void testAddMoveWinOutOfBounds() {
+    void testAddMoveOutOfBounds() {
         List<Move> moves = new LinkedList<>();
 
         Battle battle = new Battle()
-                .setBattleId(100)
+
                 .setSize(3)
                 .setStatus(BattleStatus.STARTED)
-                .setFirstPlayerId(30)
-                .setSecondPlayerId(20)
-                .setFirstMovingPlayerId(20)
+                .setFirstPlayerId(secondPlayerId)
+                .setSecondPlayerId(firstPlayerId)
+                .setFirstMovingPlayerId(firstPlayerId)
                 .setFirstMoveRule(FirstMoveRule.RANDOM)
                 .setMoves(moves);
 
-        Mockito.when(battleDao.findBattleByBattleId(Mockito.anyInt())).thenReturn(Optional.of(battle));
-        Mockito.when(battleUtils.getNextMovePlayerId(Mockito.any())).thenReturn(30);
+        Mockito.when(battleDao.findBattleByBattleId(Mockito.any())).thenReturn(Optional.of(battle));
+        Mockito.when(battleUtils.getNextMovePlayerId(Mockito.any())).thenReturn(secondPlayerId);
 
         Move move = new Move();
-        move.setPlayerId(30);
+        move.setPlayerId(secondPlayerId);
         move.setFirstCoordinate(900);
         move.setSecondCoordinate(900);
 
-        Assertions.assertThrows(BusinessException.class, () -> battleService.makeMove(100, move));
+        Assertions.assertThrows(BusinessException.class, () -> battleService.makeMove(battleId, move));
     }
 
     @Test
     void testFilter() {
         List<Battle> results = new LinkedList<>();
-        List<BattleStatus> statuses = Arrays.asList(BattleStatus.STARTED);
+        List<BattleStatus> statuses = List.of(BattleStatus.STARTED);
         Mockito.when(battleDao.findBattles(Mockito.eq(statuses), Mockito.any())).thenReturn(results);
         List<Battle> searchResult = battleService.findBattles(statuses, 1, 1);
         Assertions.assertEquals(results, searchResult);
